namespace System.DAL.Entities.Enums
{
	public enum ClubStatus
	{
		PendingStart,
		Open,
		Closed
	}
}
