namespace System.DAL.Entities.Enums
{
	public enum GroupStatus
	{
		Recruitment,
		PendingStart,
		InProgress,
		Canceled
	}
}
