namespace System.DAL.Enums
{
	public enum RoomStatus
	{
		PendingStart,
		Open,
		Closed
	}
}
